--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/otplib"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-  <script src="script.js"></script>
+  <script src="/assets/scripts/script.js"></script>
 </body>
 </html>
