--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ore Autheniticator</title>
-  <link rel="stylesheet" href="/assets/style/index.css">
+  <link rel="stylesheet" href="./assets/style/index.css">
 </head>
 <body>
   <div class="container">
@@ -23,6 +23,6 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/otplib"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-  <script src="/assets/scripts/script.js"></script>
+  <script src="./assets/scripts/script.js"></script>
 </body>
 </html>
