--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<head>
+<script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-[#303446]">
+  <div id="sidemenu">
+    
+  </div>
+</body>
