--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <head>
+  <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/buffer.js"></script>
+<script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#303446]">
   <div id="sidemenu">
     
   </div>
+  <script type="text/javascript">
+  
+</script> 
 </body>
