--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/buffer.js"></script>
-<script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
-<script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ore authenticator</title>
+  <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/buffer.js"></script>
+  <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/index.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#303446]">
-  <div id="sidemenu">
-    
-  </div>
+<body class="bg-[#303446] text-white">
+  <div id="sidemenu"></div>
+   
   <script type="text/javascript">
-  
-</script> 
+    // optlib config
+    const auth = window.otplib.authenticator;
+    const input = document.getElementById('-');
+    auth.options = { step: 30 };
+    
+  </script>
 </body>
+</html>
