--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#303446] text-white">
-  <div class="bg-white h-screen w-12 absolute right-0" id="sidemenu">
+  <div class="bg-white flex h-screen w-20 absolute right-0" id="sidemenu">
     
   </div>
    
