--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#303446] text-white">
-  <div class="bg-white flex h-screen w-20 absolute right-0" id="sidemenu">
-    
+  <img class="absolute top-0 right-0" src="/assets/img/plus.png" />
   </div>
    
   <script type="text/javascript">
