--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#303446] text-white">
-  <img class="absolute top-4 right-4" src="./assets/img/plus.png" />
+  <img id="add" class="absolute top-4 right-4" src="./assets/img/plus.svg" />
   </div>
    
   <script type="text/javascript">
