--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
   <title>Ore authenticator</title>
   <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/buffer.js"></script>
   <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/index.js"></script>
+  <script src="./assets/js/index.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#303446] text-white">
   <img id="add" class="absolute top-4 right-4" src="./assets/img/plus.svg" />
   </div>
-   
-  <script type="text/javascript">
-    // optlib config
-    const auth = window.otplib.authenticator;
-    const secret = document.getElementById('secret-input');
-    auth.options = { step: 30 };
-    
-  </script>
+
 </body>
 </html>
