--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ore authenticator</title>
-  <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/buffer.js"></script>
-  <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/index.js"></script>
-  <script src="./assets/js/index.js" defer></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/buffer.js?v=1"></script>
+  <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/index.js?v=1"></script>
+  <script src="./assets/js/index.js?v=1" defer></script>
+  <script src="https://cdn.tailwindcss.com?v=1"></script>
 </head>
 <body class="bg-[#303446] text-white">
   <img id="add" class="absolute top-4 right-4" src="./assets/img/plus.svg" />
