add container for auth codes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body class="bg-[#303446] text-white">
   <img id="add" class="absolute top-4 right-4" src="./assets/img/plus.svg" />
+  <div id="auth-container">
+    
   </div>
-
 </body>
 </html>
