--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ore authenticator</title>
-  <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/buffer.js?v=1"></script>
-  <script src="https://unpkg.com/@otplib/preset-browser@12.0.0/index.js?v=1"></script>
-  <script src="./assets/js/index.js?v=1" defer></script>
-  <script src="https://cdn.tailwindcss.com?v=1"></script>
+  <title>2FA Tokens</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/otplib@12.0.2/dist/otplib.min.js"></script>
 </head>
-<body class="bg-[#303446] text-white">
-  <img id="add" class="absolute top-4 right-4" src="./assets/img/plus.svg" />
-  <div id="auth-container">
-    
+<body class="bg-gray-50 min-h-screen flex justify-center items-center p-6">
+
+  <div class="max-w-4xl w-full">
+    <div class="flex justify-between mb-4">
+      <h1 class="text-3xl font-semibold text-gray-800">2FA Tokens</h1>
+      <img src="./assets/img/plus.svg" id="add" class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition" />
+    </div>
+    <div id="auth-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+    </div>
   </div>
-</body>
-</html>
