fix: add script sec

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>2FA Tokens</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/otplib@12.0.2/dist/otplib.min.js"></script>
+  <script src="./assets/js/index.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen flex justify-center items-center p-6">
 
