--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body class="bg-gray-50 min-h-screen flex justify-center items-center p-6">
 
   <div class="max-w-4xl w-full">
-    <div class="flex justify-between mb-4">
       <h1 class="text-3xl font-semibold text-gray-800">2FA Tokens</h1>
-      <img src="./assets/img/plus.svg" id="add" class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition" />
+      <img src="./assets/img/plus.svg" id="add" class="top-4 right-16 bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition" />
     </div>
     <div id="auth-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-    </div>
   </div>
