--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/otplib@12.0.2/dist/otplib.min.js"></script>
   <script src="assets/js/index.js"></script>
 </head>
-<body class="bg-gray-50 min-h-screen flex justify-center items-center p-6">
+<body class="bg-gray-50 min-h-screen p-6">
       <img src="assets/img/plus.svg" id="add" class="top-4 right-16 bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition" />
     <div id="auth-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
   </div>
