--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2FA Tokens</title>
+  <title>OreAuth</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/otplib@12.0.2/dist/otplib.min.js"></script>
   <script src="assets/js/index.js"></script>
+    <meta name="description" content="2FA right in your browser made easy.">
 </head>
 <body class="bg-gray-50 min-h-screen p-6">
       <img src="assets/img/plus.svg" id="add" class="top-4 right-16 bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition" />
