--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
 <body class="bg-gray-50 min-h-screen p-6">
-      <img src="assets/img/plus.svg" id="add" class="top-4 right-16 bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition" />
+      <button id="add">
+      <img src="assets/img/plus.svg" class="top-4 right-16 bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition" />
+      </button>
     <div id="auth-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
   </div>
