--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
 <body class="bg-gray-50 min-h-screen p-6">
-      <button id="add">
-      <img src="assets/img/plus.svg" class="top-4 right-16 bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition" />
-      </button>
+     <button
+  id="add"
+  class="relative bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition"
+>
+  <img src="assets/img/plus.svg" alt="Add" class="inline w-6 h-6" />
+</button>
     <div id="auth-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
   </div>
