--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <title>OreAuth</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/otplib@12.0.2/dist/otplib.min.js"></script>
+  <script src="assets/js/index.js"></script>
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
 <body class="bg-gray-50 min-h-screen p-6">
      <button
-  id="add"
+  id="Addbtn"
   class="relative bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition"
 >
   <img src="assets/img/plus.svg" alt="Add" class="inline w-6 h-6" />
 </button>
-    <div id="auth-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
   </div>
-<script src="assets/js/index.js"></script>
+
