--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
 <body class="bg-gray-50 min-h-screen p-6">
-     <button
-  id="Addbtn"
-  class="relative bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700 transition"
->
-  <img src="assets/img/plus.svg" alt="Add" class="inline w-6 h-6" />
-</button>
+  <img id="Addbtn" src="assets/img/plus.svg" alt="Add" class="inline w-6 h-6" />
   </div>
 
