--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/buffer.js"></script>
 <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
-  <script src="assets/js/index.js"></script>
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
 <body class="bg-gray-50 min-h-screen p-6">
   <img id="Addbtn" src="assets/img/plus.svg" alt="Add" class="inline w-6 h-6" />
   </div>
+  <script src="assets/js/index.js"></script>
+</body>
 
