--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
-<body class="bg-gray-50 min-h-screen p-6">
-  <img id="Addbtn" src="assets/img/plus.svg" alt="Add" class="inline w-6 h-6" />
+<body class="bg-gray-50">
+  <img id="Addbtn" src="assets/img/plus.svg" alt="Add" class="inline absolute w-6 h-6" />
   </div>
   <script src="assets/js/index.js"></script>
 </body>
