--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
-<body class="bg-gray-50">
+<body class="bg-[#24273a]">
   <img id="Addbtn" src="assets/img/plus.svg" alt="Add" class="inline absolute w-6 h-6" />
   </div>
   <script src="assets/js/index.js"></script>
 </body>
-
+</html>
