--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
 <body class="bg-[#24273a]">
-  <img id="Addbtn" src="assets/img/plus.svg" alt="Add" class="inline absolute w-6 h-6" />
+  <img
+  id="Addbtn"
+  src="assets/img/plus.svg"
+  alt="Add"
+  class="inline-block w-6 h-6 absolute transition-transform duration-200 hover:scale-110 active:scale-95 hover:opacity-80"
+/>
+
   </div>
   <script src="assets/js/index.js"></script>
 </body>
