--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
 <body class="bg-[#24273a]">
-  <img
+  <button
   id="Addbtn"
-  src="assets/img/plus.svg"
-  alt="Add"
-  class="inline-block w-6 h-6 absolute transition-transform duration-200 hover:scale-110 active:scale-95 hover:opacity-80"
-/>
-
-  </div>
+  class="flex items-center justify-center w-10 h-10 bg-blue-500 rounded-full hover:bg-blue-600 active:bg-blue-700 transition-all duration-200 shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
+>
+  <img
+    src="assets/img/plus.svg"
+    alt="Add"
+    class="w-5 h-5"
+  />
+</button>
   <script src="assets/js/index.js"></script>
 </body>
 </html>
