--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     class="w-5 h-5"
   />
 </button>
+  <div id="container" class="w-42 h-12">
+
+  </div>
   <script src="assets/js/index.js"></script>
 </body>
 </html>
