--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     class="w-5 h-5"
   />
 </button>
-  <div id="container" class="bg-[#FFFFFF] w-42 h-12">
+  <div id="container" class="flex justify-cente bg-[#FFFFFF] w-42 h-12">
 
   </div>
   <script src="assets/js/index.js"></script>
