--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     class="w-5 h-5"
   />
 </button>
-  <div id="container" class="flex justify-center bg-[#FFFFFF] w-42 h-12">
-
-  </div>
+  <div id="container" class="flex justify-center items-center bg-[#FFFFFF] w-42 h-12">
+  d
+</div>
   <script src="assets/js/index.js"></script>
 </body>
 </html>
