--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     class="w-5 h-5"
   />
 </button>
+ <div class="flex justify-center items-center h-screen bg-gray-100">
   <div id="container" class="flex justify-center items-center bg-[#FFFFFF] w-42 h-12">
-  d
+    d
+  </div>
 </div>
   <script src="assets/js/index.js"></script>
 </body>
