--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OreAuth</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -9,20 +9,9 @@
 <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
-<body class="bg-[#24273a]">
-  <button
-  id="Addbtn"
-  class="flex items-center justify-center w-10 h-10 bg-blue-500 rounded-full hover:bg-blue-600 active:bg-blue-700 transition-all duration-200 shadow-md hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-400"
->
-  <img
-    src="assets/img/plus.svg"
-    alt="Add"
-    class="w-5 h-5"
-  />
-</button>
-  <div id="container" class="flex justify-center items-center bg-[#FFFFFF] w-24 h-6">
-    d
-  </div>
-  <script src="assets/js/index.js"></script>
+<body class="flex justify-center items-center min-h-screen bg-gray-100">
+    <div class="flex justify-center items-center text-center bg-white w-24 h-12 leading-none border border-gray-300 shadow-md">
+        d
+    </div>
 </body>
 </html>
