--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
-<body class="flex justify-center items-center min-h-screen bg-gray-100">
+<body class="flex justify-center items-center min-h-screen bg-[#24273a]">
     <div class="flex justify-center items-center text-center bg-white w-24 h-12 leading-none border border-gray-300 shadow-md">
         d
     </div>
