--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="2FA right in your browser made easy.">
 </head>
 <body class="flex justify-center items-center min-h-screen bg-[#24273a]">
-    <div id="container" class="rounded-md flex justify-center items-center text-center bg-white w-72 h-96 leading-none border border-gray-300 shadow-md">
+    <div id="container" class="rounded-md flex justify-center items-center text-center bg-white w-72 h-[210px] leading-none border border-gray-300 shadow-md">
         d
     </div>
 </body>
